--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,9 @@
-site_name: My Docs
+site_name: test 
+site_url: https://example.com/ 
+nav: 
+  - Home: index.md  
+  - About: about.md
+theme:
+  name: material
+  palette:
+    primary: teal
